# vimo-rust

./: Cargo.toml  README.md
vimo-ffi/: Cargo.toml  MIGRATION.md
vimo-ffi/src/: error.rs  lib.rs  panic.rs  string.rs
